merging the code from dev to int env